--- a/J2.md
+++ b/J2.md
@@ -1,1 +1,17 @@
+## J2 Worksheet
+# Niyati Shah
 
+# 1. Which of the following is an object and which is a basic type?
+```java
+int a;
+double b;
+int c[] = {1, 2, 3};
+String s = "Hello World";
+```
+Objects:
+- int c[]
+- String s
+
+Basic Type:
+- int a;
+- double n;
