--- a/J2.md
+++ b/J2.md
@@ -1,5 +1,5 @@
 ## J2 Worksheet
-# Niyati Shah
+Niyati Shah
 
 # 1. Which of the following is an object and which is a basic type?
 ```java
@@ -15,3 +15,198 @@ Objects:
 Basic Type:
 - int a;
 - double n;
+
+# 2. Static Methods
+**(A) What is a static method in Java?** from internet?
+A static method is a method that belongs to a class, not an object, and can be called without creating an instance of the class.
+**(B) Why does the main method need to be a static method?**
+The compiler can call the method directly without creating an instance of the class.
+
+# 3. What is the output of the following programs?
+```java
+/* Program 1 */
+public static void main(final String args[]) {
+    String choice = new String("A");
+    if (choice == "A") {
+        System.out.println("Correct");
+    }
+    else {
+        System.out.println("Wrong");
+    }
+}
+```
+```
+Output: "Wrong"
+```
+
+```java
+/* Program 2 */
+public static void main(final String args[]) {
+    String choice = new String("A");
+    if (choice.equals("A")) {
+        System.out.println("Correct");
+    }
+    else {
+        System.out.println("Wrong");
+    }
+}
+```
+```
+Output: "Correct"
+```
+
+# 4. Does the below program change the season? Why, or why not?
+```java
+static void change_season(String str) {
+    str = "Spring";
+}
+
+public static void main(final String args[]) {
+    String season = "Winter";
+    change_season(season);
+    System.out.println("The current season is: " + season);
+}
+```
+No, the program does not change the season, since 
+
+# 5. What is the output of the main method below? Please explain.
+```java
+public class Point {
+    double x = 0;
+    double y = 0;
+
+    public Point(double x, double y) {
+        x = x;
+        y = y;
+    }
+}
+public static void main(final String args[]) {
+    Point point = new Point(1, 2);
+    System.out.println("X: " + point.x + " Y: " + point.y);
+}
+```
+```
+Output:
+```
+explanation:
+
+# 6. What principle of OOP does the private declaration for variable and functions achieve? Explain.
+
+
+# 7. In the Point class below, how does Java choose between the two constructors.
+```java
+public class Point {
+
+   private double x, y; 
+   
+   public Point(double x, double y) {
+        this.x = x;
+        this.y = y;
+   }
+
+   public Point(Point other) {
+       this.x = other.getX();
+       this.y = other.getY();
+   }
+}
+```
+
+
+# 8. Consider below:
+```java
+public class Point {
+   private double x,y; //the x,y fields
+   public Point(double x,double y); //construct a point from an x,y
+   public Point(Point other); //construct a point from another point
+   public double getX(); //return the x component
+   public double getY(); //return the y component
+   public double setXY(double x, double y); //sets the x and y fields
+   public String toString(); //return the string representation
+   private double sum_x_y(); // Returns the sum of X and Y
+}
+```
+**Say we want to make a class that extends Point with a method that can reflect a point across the X and Y axis. Which of the following implementations achieves this?**
+public class CustomPoint extends Point {
+    public void reflect(); // Reflects point
+}
+```
+Option __
+```java
+
+```
+
+# 9. If we add this constructor to CustomPoint, and then run the below program, what is the output?:
+```java
+public CustomPoint() {
+    setXY(10, 10); // Line 1
+    super(0, 0); // Line 2
+}
+public static void main(final String args[]) {
+    CustomPoint p = new CustomPoint();
+    System.out.println(p.toString());
+}
+```
+```
+Output:
+```
+
+# 10. What if we switch line 1 and 2 in the previous question?
+
+
+# 11. If we want to override sum_x_y in our custom point, but first reflect the point before returning the sum, which of the following implementations are valid? (Note: assume that reflect has a valid implementation)
+Option __:
+```java
+
+```
+
+# 12. What is the point of the protected modifier? Why do we have it and how does it work in terms of inheritance?
+
+
+# 13. Consider the following class: 
+```java
+public class Racecar {
+
+    private int number; 
+    private Driver driver; //assume implemented properly
+    protected String sponsor = null;
+    public Racecar(int n, Driver d) {
+        number = n;
+        driver = d;
+    }
+
+    public String toString() {
+        return "Car #" + number + " Driver: " + driver;
+    }
+    
+    protected addSponsor(String sp) {
+        sponsor = sp;
+    }
+}
+```
+**Suppose we want to extend this to a FormulaOne class which has a make, e.g., Mercedes. Complete the constructor and toString() method.**
+```java
+public class FormulaOne extends Racecar {
+    private String make;
+
+    //TODO
+
+}
+```
+
+# 14. Using the Racecar and FormulaOne classes above, if we had a main method in a different class than either of those,
+```java
+public static void main(String args[]) {
+
+   Racecar r = new Racecar(/* ... some args .. */);
+   r.addSponsor("Home Depot"); //<--A
+
+   FormulaOne f1 = new FormulaOne(/* ... some args .. */);
+   f1.addSponsor("Home Depot"); //<--B
+     
+}
+```
+**Does the code work at mark A or mark B or neither? Explain.**
+
+
+# 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
+
