--- a/J2.md
+++ b/J2.md
@@ -13,13 +13,16 @@ Objects:
 - String s
 
 Basic Type:
-- int a;
-- double n;
+- int a
+- double n
 
 # 2. Static Methods
 **(A) What is a static method in Java?** from internet?
+
 A static method is a method that belongs to a class, not an object, and can be called without creating an instance of the class.
+
 **(B) Why does the main method need to be a static method?**
+
 The compiler can call the method directly without creating an instance of the class.
 
 # 3. What is the output of the following programs?
@@ -67,7 +70,7 @@ public static void main(final String args[]) {
     System.out.println("The current season is: " + season);
 }
 ```
-No, the program does not change the season, since 
+No, the program does not change the season in the main method, because when the variable season is passed to change_season, a copy of the reference to the season String is made within the method. Since no value is returned from the change_season method and reassigned, the original reference remains unchanged.
 
 # 5. What is the output of the main method below? Please explain.
 ```java
@@ -86,12 +89,12 @@ public static void main(final String args[]) {
 }
 ```
 ```
-Output:
+Output: X: 0.0 Y: 0.0
 ```
-explanation:
+Explanation: The parameters x and y are local variables that shadow the instance variables x and y of the Point class. So, when it runs x = x or y = y, it is just reassigning the local variable x to itself, instead of changing this.x or this.y.
 
 # 6. What principle of OOP does the private declaration for variable and functions achieve? Explain.
-
+Private declaration for variable and functions acheives encapsulation_____
 
 # 7. In the Point class below, how does Java choose between the two constructors.
 ```java
