--- a/J2.md
+++ b/J2.md
@@ -113,7 +113,7 @@ public class Point {
    }
 }
 ```
-
+Java will choose between two constructors based on the type and number of arguments passed as parameters when a Point object is created. If two doubles are passed, the first one will be used, and, when another Point object is passed, the second will be used.
 
 # 8. Consider below:
 ```java
@@ -133,9 +133,13 @@ public class CustomPoint extends Point {
     public void reflect(); // Reflects point
 }
 ```
-Option __
+Option 4
 ```java
-
+public void reflect() {
+    double x = -this.getX();
+    double y =-this.getY();
+    this.setXY(x,y);
+}
 ```
 
 # 9. If we add this constructor to CustomPoint, and then run the below program, what is the output?:
@@ -150,17 +154,27 @@ public static void main(final String args[]) {
 }
 ```
 ```
-Output:
+Output: There will be an error
 ```
 
 # 10. What if we switch line 1 and 2 in the previous question?
-
+This would resolve the error, because the super() call must be the first statement in the constructor in order to invoke the parent class constructor.
 
 # 11. If we want to override sum_x_y in our custom point, but first reflect the point before returning the sum, which of the following implementations are valid? (Note: assume that reflect has a valid implementation)
-Option __:
 ```java
+//Option 1
+public double sum_x_y() {
+    this.reflect();
+    return super.sum_x_y();
+}
 
+//Option 2
+public double sum_x_y() {
+    this.reflect();
+    return this.getX() + this.getY();
+}
 ```
+These are both valid implementations. Option 1___
 
 # 12. What is the point of the protected modifier? Why do we have it and how does it work in terms of inheritance?
 
