--- a/J2.md
+++ b/J2.md
@@ -154,7 +154,7 @@ public static void main(final String args[]) {
 }
 ```
 ```
-Output: There will be an error
+Output: There will be an error ___
 ```
 
 # 10. What if we switch line 1 and 2 in the previous question?
@@ -174,7 +174,7 @@ public double sum_x_y() {
     return this.getX() + this.getY();
 }
 ```
-These are both valid implementations. Option 1___
+Options 1 and 2 are both valid implementations. Option 1___
 
 # 12. What is the point of the protected modifier? Why do we have it and how does it work in terms of inheritance?
 
