--- a/J2.md
+++ b/J2.md
@@ -17,7 +17,7 @@ Basic Type:
 - double n
 
 # 2. Static Methods
-**(A) What is a static method in Java?** from internet?
+**(A) What is a static method in Java?**
 
 A static method is a method that belongs to a class, not an object, and can be called without creating an instance of the class.
 
@@ -94,7 +94,7 @@ Output: X: 0.0 Y: 0.0
 Explanation: The parameters x and y are local variables that shadow the instance variables x and y of the Point class. So, when it runs x = x or y = y, it is just reassigning the local variable x to itself, instead of changing this.x or this.y.
 
 # 6. What principle of OOP does the private declaration for variable and functions achieve? Explain.
-Private declaration for variable and functions acheives encapsulation_____
+Private declaration for variable and functions achieves encapsulation, so that the programmer only needs to know the public interface class in order to use it, while everything else is hidden via private fields and methods. Making variable private protects them from being accessed or modified from outside code, and encapsulation allows the programmer to create getter and setter methods to have limited access to the private variables.
 
 # 7. In the Point class below, how does Java choose between the two constructors.
 ```java
@@ -141,6 +141,7 @@ public void reflect() {
     this.setXY(x,y);
 }
 ```
+Option 4 is the correct implementation since it uses the encapsulation by using getter and setter methods on the private variables.
 
 # 9. If we add this constructor to CustomPoint, and then run the below program, what is the output?:
 ```java
@@ -154,8 +155,9 @@ public static void main(final String args[]) {
 }
 ```
 ```
-Output: There will be an error ___
+Output: Error
 ```
+There will be an error since super() which tries to use the parent class's constructor, so it needs to be the first statement in the code.
 
 # 10. What if we switch line 1 and 2 in the previous question?
 This would resolve the error, because the super() call must be the first statement in the constructor in order to invoke the parent class constructor.
@@ -174,7 +176,7 @@ public double sum_x_y() {
     return this.getX() + this.getY();
 }
 ```
-Options 1 and 2 are both valid implementations. Option 1___
+Options 1 and 2 are both valid implementations. Option 1
 
 # 12. What is the point of the protected modifier? Why do we have it and how does it work in terms of inheritance?
 
