--- a/J2.md
+++ b/J2.md
@@ -176,10 +176,10 @@ public double sum_x_y() {
     return this.getX() + this.getY();
 }
 ```
-Options 1 and 2 are both valid implementations. Option 1
+Options 1 and 2 are both valid implementations. Option 1, first, calls this.reflect to reflect the point, then uses super.sum_x_y() to call the parent's class method and return the sum of the reflected values. Option 2 reflects the points, then directly sums with the getter methods, but without calling the parent class. The other options are creating a new method, instead of overriding sum_x_y.
 
 # 12. What is the point of the protected modifier? Why do we have it and how does it work in terms of inheritance?
-
+The protected modifer allows a class to access fields, methods, or constructors from other subclasses or classes within the same package, but restricting acces to outside classes that are not related through inheritance. When a method is defined with protected keyword, subclasses and classes in the same package can access. This relates to inheritance because subclasses can inherit and accesss these members of the parent class, while restricting them from unrelated classes.
 
 # 13. Consider the following class: 
 ```java
@@ -208,7 +208,14 @@ public class FormulaOne extends Racecar {
     private String make;
 
     //TODO
+    public FormulaOne(int n, Driver d, String make) {
+        super(n,d);
+        this.make = make;
+    }
 
+    public String toString() {
+        return "Make: " + make + ", " + super.toString();
+    }
 }
 ```
 
@@ -225,7 +232,7 @@ public static void main(String args[]) {
 }
 ```
 **Does the code work at mark A or mark B or neither? Explain.**
-
+The code will not work at mark A because the main method is located in a different class from the Racecar and FormulaOne classes. The addSponsor method will not be accessible. The code will work at mark B because it is calling addSponsor on an object of a subclass of Racecar, FormulaOne, and addSponsor will be accessible in all subclasses. This is due to the protected modifier and how this method is inherited from the parent class.
 
 # 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
 
