--- a/J2.md
+++ b/J2.md
@@ -129,6 +129,7 @@ public class Point {
 }
 ```
 **Say we want to make a class that extends Point with a method that can reflect a point across the X and Y axis. Which of the following implementations achieves this?**
+```java
 public class CustomPoint extends Point {
     public void reflect(); // Reflects point
 }
@@ -232,6 +233,7 @@ public static void main(String args[]) {
 }
 ```
 **Does the code work at mark A or mark B or neither? Explain.**
+
 The code will not work at mark A because the main method is located in a different class from the Racecar and FormulaOne classes. The addSponsor method will not be accessible. The code will work at mark B because it is calling addSponsor on an object of a subclass of Racecar, FormulaOne, and addSponsor will be accessible in all subclasses. This is due to the protected modifier and how this method is inherited from the parent class.
 
 # 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
