--- a/J2.md
+++ b/J2.md
@@ -237,4 +237,4 @@ public static void main(String args[]) {
 The code will not work at mark A because the main method is located in a different class from the Racecar and FormulaOne classes. The addSponsor method will not be accessible. The code will work at mark B because it is calling addSponsor on an object of a subclass of Racecar, FormulaOne, and addSponsor will be accessible in all subclasses. This is due to the protected modifier and how this method is inherited from the parent class.
 
 # 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
-
+Intern would be a subclass of Employee with an additional attribute of expiration as an integer. Since Employee has association with Unit and Manager, Intern would also belong to a Unit and report to a Manager.
