--- a/J2.md
+++ b/J2.md
@@ -234,7 +234,7 @@ public static void main(String args[]) {
 ```
 **Does the code work at mark A or mark B or neither? Explain.**
 
-The code won't work at either marks because the addSponsor method is protected, and the main method is outside the inheritance key. The main method is located in a different class from the Racecar and FormulaOne classes. The addSponsor method will not be accessible. The code will work at mark B b and not allowed access to protected methods directly.
+The code won't work at either marks because the addSponsor method is protected, and the main method is outside the inheritance key. The main method is located in a different class from the Racecar and FormulaOne classes and not allowed access to protected methods directly.
 
 # 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
 Intern would be a subclass of Employee with an additional attribute of expiration as an integer. Since Employee has association with Unit and Manager, Intern would also belong to a Unit and report to a Manager.
