--- a/J2.md
+++ b/J2.md
@@ -238,3 +238,5 @@ The code won't work at either marks because the addSponsor method is protected, 
 
 # 15. Consider the UML diagram from the notes. Expand this to include an intern. An intern is like an employee, has a manager, unit, but has an expiration on their employment. How does this fit into the UML diagram?
 Intern would be a subclass of Employee with an additional attribute of expiration as an integer. Since Employee has association with Unit and Manager, Intern would also belong to a Unit and report to a Manager.
+
+![UML Diagram](https://github.com/niyatishah1/niyatishah1-worksheet-J2/blob/main/IMG_0406.jpg)
